--- a/css.css
+++ b/css.css
@@ -1,25 +1,45 @@
-.top {
-padding: 20px;
-  text-align: center;
-  background: #1abc9c;
-  color: white;
-  font-size: 30px;
-
-}
-h1 {
-	text-align: left;
-	font-family: arial;
-	color: grey;
-
-
-}
-html, body, p{ /* Reset sheet */
-	margin:0; 
-	padding:0; 
-} 
-.topp{
-	background-color: lightgrey;
+*{
+	margin: 0;
+	padding: 0;
 }
 body {
-	background-color:;
+	background-image: url("gif.gif");
+	 background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+.top {
+	background-color: lightgrey;
+	padding: 30px;
+	text-align: center;
+	font-size: 30px;
+	font-family: arial;
+}
+.barremid {
+	margin-left: 15%;
+	margin-right: 15%;
+}
+.b1 {
+	margin-top: 50px;
+	margin-left: 15%;
+	width: 800px;
+	height: 400px;
+}
+.bouton11 {
+	margin: 0.5em;
+	padding: 5px;
+	margin-left: 1%;
+}
+.bouton1 {
+	padding: 5px;
+	margin-left: 130px;
+}
+
+.boutontp {
+margin-left: 15%;
+}
+
+.boutontpd {
+	margin-left: 193px;
+
 }
